--- a/setup.cfg
+++ b/setup.cfg
@@ -8,10 +8,10 @@ license = 2BSD
 author = cielavenir
 author_email = cielartisan@gmail.com
 classifiers=
-    Development Status :: 4 - Beta',
-    Intended Audience :: Developers',
-    License :: OSI Approved :: BSD License',
-    Operating System :: POSIX'
+    Development Status :: 4 - Beta
+    Intended Audience :: Developers
+    License :: OSI Approved :: BSD License
+    Operating System :: POSIX
     Topic :: Software Development :: Libraries
     Topic :: Utilities
     Programming Language :: Python :: 2
