--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = dladdr
 version = attr: dladdr.__version__
-description = 'A Python binding for dladdr'
+description = A Python binding for dladdr
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = 2BSD
