Fix license line

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,13 +4,12 @@ version = attr: dladdr.__version__
 description = A Python binding for dladdr
 long_description = file: README.md
 long_description_content_type = text/markdown
-license = 2BSD
+license = BSD-2-Clause
 author = cielavenir
 author_email = cielartisan@gmail.com
 classifiers=
     Development Status :: 4 - Beta
     Intended Audience :: Developers
-    License :: OSI Approved :: BSD License
     Operating System :: POSIX
     Topic :: Software Development :: Libraries
     Topic :: Utilities
