forgot to set url

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ version = attr: dladdr.__version__
 description = A Python binding for dladdr
 long_description = file: README.md
 long_description_content_type = text/markdown
+url = https://github.com/cielavenir/python-dladdr
 license = BSD-2-Clause
 author = cielavenir
 author_email = cielartisan@gmail.com
