--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = dladdr
-version = attr: dladdr.__version__
+version = attr: dladdr.version.__version__
 description = A Python binding for dladdr
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -23,4 +23,4 @@ classifiers=
     Programming Language :: Python :: Implementation :: PyPy
 
 [options]
-py_modules = dladdr
+packages = dladdr
